--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mongodb": "^6.2.0",
+    "mongoose": "^8.0.1",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
