--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "traslators-page",
+  "name": "sunrise-translator-dashboard",
   "version": "0.1.0",
   "private": true,
   "scripts": {
