intermidiate changes for enums

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 DATABASE = mongodb+srv://testApp:<PASSWORD>@cluster0.vmv4s.mongodb.net/myProject?retryWrites=true&w=majority
 DATABASE_PASSWORD = 72107210
+EMAIL_FROM = meetyourmate.od@gmail.com
+EMAIL_TO = info@babchenkov-portfolio.com
