mongoose test base

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ DATABASE = mongodb+srv://testApp:<PASSWORD>@cluster0.vmv4s.mongodb.net/myProject
 DATABASE_PASSWORD = 72107210
 EMAIL_FROM = meetyourmate.od@gmail.com
 EMAIL_TO = info@babchenkov-portfolio.com
+TEST_COLLECTIONS_CLIENT = testClientCollection
+TEST_COLLECTION_TRANSLATORS = testTranslatorCollection
