--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.0.2",
     "nodemailer": "^6.9.7",
     "react": "^18",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
